versioned_docs/version-4.0.0/quickstart/java-spring-boot-mongo.md
---
id: java-spring-boot-mongo
title: Sample Rest API with Spring-Boot and MongoDB
sidebar_label: Potion App
description: This CRUD Application is about managing the data of Magical Potions in the Keploy inventory.
tags:
  - java
  - spring-jpa
  - java-framework
  - quickstart
  - samples
  - examples
  - tutorial
  - mongodb
keywords:
  - MongoDB
  - Maven
  - Springboot Framework
  - Postgres
  - SQL
  - Java
  - API Test generator
  - Auto Testcase generation
  - Junit
---

import HowTo from '@site/src/components/HowTo';

<HowTo
name="Sample Rest API with Spring-Boot and MongoDB — record and replay tests with Keploy"
description="Clone the sample app, run it under Keploy to capture API traffic, then replay the recorded testcases."
totalTime="PT10M"
estimatedCost={{currency: "USD", value: "0"}}
tools={["Keploy CLI", "Docker", "git"]}
visible={false}
steps={[
{
name: "Install Keploy",
text: "Install the Keploy CLI: on Linux or macOS (Apple Silicon) with the install script from https://keploy.io/install.sh, or on Windows (x86-64) as keploy.exe from PowerShell (https://keploy.io/docs/installation/windows-installation/#option-1-run-keploy-natively). The app runs natively on Linux, macOS and Windows.",
},
{
name: "Clone the sample app",
text: "Clone the sample repo referenced on this page and install its dependencies.",
},
{
name: "Start dependencies (database, etc.)",
text: "Bring up any Docker services the app needs (databases, message queues) before recording.",
},
{
name: "Record API calls",
text: "Run keploy record -c \"CMD_TO_RUN_APP\" and exercise the app's endpoints (curl, Postman) to capture testcases and mocks.",
},
{
name: "Replay tests",
text: "Run keploy test -c \"CMD_TO_RUN_APP\" --delay 10 to replay the recorded testcases and detect regressions.",
},
]}
/>

## Introduction

🪄 Dive into the world of REST API and see how seamlessly Keploy integrates with Spring-Boot and MongoDB Buckle up, it's gonna be a fun ride! 🎢

import InstallReminder from '@site/src/components/InstallReminder';

<InstallReminder />

## Pre-Requisite 🛠️

- Install JDK and add JAVA_HOME in environment variable.
- Install Maven
- Install Docker

## Get Started! 🎬

### Set up the Mongo database

Create a docker network -

```bash
docker network create backend
```

Start the MongoDB instance -

```bash
docker run -p 27017:27017 --name spring-boot-mongo --network backend mongo
```

### Clone the sample REST API CRUD app 🧪

```bash
git clone https://github.com/keploy/samples-java.git && cd samples-java/spring-boot-mongo
mvn wrapper:wrapper
./mvnw clean install
```

> **Note**: For Windows, use `mvnw.cmd clean install`

## Run Application

We'll be running our sample application right on your machine, but just to make things a tad more thrilling, we'll have the database (mongoDB) chill on Docker. Ready? Let's get the party started!🎉

This runs natively on Linux, macOS (Apple Silicon) and Windows (x86-64) — see [Installing Keploy](/docs/server/installation/).

### 📼 Roll the Tape - Recording Time!

Ready, set, record! Here's how:

```bash
keploy record -c "./mvnw spring-boot:run"
```

On macOS, Keploy is dropped by the `./mvnw` launcher — run the jar that `./mvnw clean install` built with your JDK's own `java` instead, here and in `keploy test` below: `keploy record -c "${JAVA_HOME:-$(/usr/libexec/java_home)}/bin/java -jar target/PotionsAPI-0.0.1-SNAPSHOT.jar"` ([details](/docs/installation/macos-installation/#option-1-run-keploy-natively)).

On Windows, Keploy starts your app through `cmd.exe`, which cannot run `./mvnw` — run the jar that `mvnw.cmd clean install` built, here and in `keploy test` below: `keploy record -c "java -jar target/PotionsAPI-0.0.1-SNAPSHOT.jar"`.

Alright, magician! With the app alive and kicking, let's weave some test cases. The spell? Making some API calls! Postman, Hoppscotch, or the classic curl - pick your wand.

### Generate testcases

To generate testcases we just need to **make some API calls.**

**1. Make a POST request**

```bash
curl --location 'http://localhost:8080/potions' \
--header 'Content-Type: application/json' \
--data '    {
      "name": "Strength Potion v2",
      "description": "Enhances the drinker'\''s physical strength temporarily.",
      "bottle": 3,
      "quantity": 150
  }'
```

**2. Make a GET request**

```bash
curl --location --request GET 'http://localhost:8080/potions'
```

> Take a note of the `id` and replace the `UUID_OF_POTION` with the `id` in the upcoming API requests!

**3. Make a PUT request**

```bash
  curl --location --request PUT 'http://localhost:8080/potions/UUID_OF_POTION' \
  --header 'Content-Type: application/json' \
  --data '    {
        "name": "Strength Potion",
        "description": "Enhances the drinker'\''s physical strength temporarily.",
        "bottle": 5,
        "quantity": 200
    }'
```

**4. Make a GET request**

```bash
curl --location --request GET 'http://localhost:8080/potions/UUID_OF_POTION'
```

**5. Make a DELETE request**

```bash
curl --location --request DELETE 'http://localhost:8080/potions/UUID_OF_POTION'
```

Give yourself a pat on the back! With that simple spell, you've conjured up a test case with a mock! Explore the **Keploy directory** and you'll discover your handiwork in `test-x.yml` and `mocks.yml`.

Want to see if everything works as expected?

### Run Tests 🏁

Ready to put your spells to the test?

```bash
keploy test -c "./mvnw spring-boot:run" --delay 15
```

This will run the tests and generate the report in the `Keploy/reports` directory in the CWD.

Final thoughts? Dive deeper! Try different API calls, tweak the DB response in the `mocks.yml`, or fiddle with the request or response in `test-x.yml`. We provided you with some data in [potions.json](https://github.com/keploy/samples-java/blob/main/spring-boot-mongo/potions.json). Run the tests again and see the magic unfold! ✨👩‍💻👨‍💻✨

## Wrapping it up 🎉

Congrats on the journey so far! You've seen Keploy's power, flexed your coding muscles, and had a bit of fun too! Now, go out there and keep exploring, innovating, and creating! Remember, with the right tools and a sprinkle of fun, anything's possible. 😊🚀

## Related

- [Sample Java Apps](/docs/quickstart/java-springboot-filter/) — browse more Java samples.
- [Keploy Integration with PetClinic App](/docs/quickstart/pet-clinic/) — Spring Boot with Postgres.
- [Sample REST API with Spring-Boot and XML](/docs/quickstart/java-spring-boot-xml/) — Spring Boot serving XML.
- [Keploy with OpenHospital](/docs/quickstart/openhospital/) — larger Spring Boot app.
